--- a/vis.ipynb
+++ b/vis.ipynb
@@ -9,29 +9,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import open3d as o3d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PointCloud with 7902 points.\n"
+      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
+      "[Open3D INFO] WebRTC GUI backend enabled.\n",
+      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import open3d as o3d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PointCloud with 13529 points.\n"
      ]
     }
    ],
    "source": [
     "# ply_path = 'data\\\\points\\\\11_images.ply'\n",
-    "ply_path = 'data/points/11_images.ply'\n",
+    "ply_path = 'data/points_pnp_oringin/11_images.ply'\n",
     "\n",
     "point_cloud = o3d.io.read_point_cloud(ply_path)\n",
     "\n",
